# SSR

./: CMakeLists.txt  googleservices.xml
Classes/: AppDelegate.cpp  AppDelegate.h  DNConstants.h
Classes/DNAcheivementManager/: DNAcheivementManager.cpp
Classes/DNDOManager/: DNDOCharLabel.cpp  DNDOCharLabel.hpp  DNDOManager.cpp
Classes/DNDataManager/: DNDataManager.cpp
Classes/DNNetworkCheck/: DNCommonUtils.h  DNGameUtility.cpp  DNGameUtility.hpp  DNObjectiveCCalls.h  DNObjectiveCCalls.mm
Classes/DNSplashScreen/: DNSplashScreen.cpp
Classes/JNICommunicator/: LVJniCommunicator.hpp
Classes/Scene/DNGameScene/: DNGameScene.cpp  DNHUDLayer.cpp  DNHUDLayer.hpp  DNPauseMenu.cpp  DNPauseMenu.hpp  DNReviveMenu.cpp  DNVictoryMenu.cpp  UserDialogueLayer.hpp
Classes/Scene/DNGameScene/DNBackGroundLayer/: DNBackGroundLayer.hpp
Classes/Scene/DNGameSceneLayer/DNCharacterSprite/: DNCharacterSprite.hpp
Classes/Scene/DNMainMenuLayer/: DNBgPackLayer.cpp  DNCharacterPack.cpp  DNMainMenuLayer.cpp
Classes/Scene/DNSettingScene/: DNSettingScene.cpp
Resources/: sdkbox_config.json
Resources/Normal/GameScene/Animation/Character/char1/: Character1.atlas  Character1.skel
Resources/Normal/GameScene/Animation/Character/char2/: Character2.atlas  Character2.skel
Resources/Normal/GameScene/Animation/Character/char3/: Character3.atlas  Character3.skel
Resources/Normal/GameScene/Animation/Character/char4/: Character4.atlas  Character4.skel
Resources/Normal/GameScene/Animation/Character/char5/: Character5.atlas  Character5.skel
Resources/Normal/GameScene/Animation/Wall/: wall.atlas  wall.skel
Resources/Plist/: BackgroundDetails.plist  ChacterDetails.plist  DailyObjectiveDetails.plist  LevelDetails.plist  WallsOrder.plist
cocos2d/cocos/2d/: CCMenuItem.cpp
cocos2d/cocos/platform/: CCFileUtils.cpp
cocos2d/cocos/platform/android/jni/: ProcessCpuTracker.cpp
cocos2d/cocos/platform/android/libcocos2dx/: build.gradle
proj.android/: .cproject  .project  AndroidManifest.xml  build.xml  proguard-project.txt  project.properties
proj.android-studio/: build.gradle  gradle.properties  settings.gradle
proj.android-studio/app/: AndroidManifest.xml  build.gradle  fabric.properties  google-services.json  google-services1.json  proguard-rules.pro  project.properties
proj.android-studio/app/jni/: Android.mk  Application.mk
proj.android-studio/app/jni/PluginShare/: PluginShare.h
proj.android-studio/app/release/: output.json
proj.android-studio/app/res/values/: strings.xml
proj.android-studio/app/src/org/cocos2dx/cpp/: AppActivity.java  GoogleSignInClass.java  Notification_receiver.java  Repeating_activity.java
proj.android-studio/gradle/wrapper/: gradle-wrapper.properties
proj.android/app/: project.properties
proj.android/app/jni/: Android.mk
proj.android/app/jni/PluginFacebook/: PluginFacebook.h
proj.android/app/src/org/cocos2dx/cpp/: AppActivity.java
proj.android/jni/: Android.mk
proj.android/res/values/: strings.xml
proj.ios_mac/: GoogleService-Info.plist
proj.ios_mac/FBSDKCoreKit.framework/: Info.plist
proj.ios_mac/FBSDKLoginKit.framework/: Info.plist
proj.ios_mac/FBSDKShareKit.framework/: Info.plist
proj.ios_mac/MyGame3-mobile/: MyGame3-mobile.entitlements
proj.ios_mac/MyGame3-mobile/Images.xcassets/AppIcon.appiconset/: Contents.json
proj.ios_mac/MyGame3-mobile/Images.xcassets/LaunchImage.launchimage/: Contents.json
proj.ios_mac/MyGame3.xcodeproj/: project.pbxproj
proj.ios_mac/MyGame3.xcodeproj/project.xcworkspace/xcuserdata/yathiraj.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
proj.ios_mac/MyGame3.xcodeproj/xcshareddata/xcschemes/: MyGame3-mobile.xcscheme
proj.ios_mac/MyGame3.xcodeproj/xcuserdata/yathiraj.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
proj.ios_mac/MyGame3.xcodeproj/xcuserdata/yathiraj.xcuserdatad/xcschemes/: xcschememanagement.plist
proj.ios_mac/PluginSdkboxPlay.framework/Versions/Current/Headers/: PluginSdkboxPlay.h
proj.ios_mac/SuperSwitchRun/: .sdkbox_packages.json
proj.ios_mac/SuperSwitchRun.xcodeproj/: project.pbxproj
proj.ios_mac/SuperSwitchRun.xcodeproj/project.xcworkspace/xcuserdata/yathiraj.xcuserdatad/: UserInterfaceState.xcuserstate
proj.ios_mac/SuperSwitchRun.xcodeproj/xcuserdata/yathiraj.xcuserdatad/xcschemes/: xcschememanagement.plist
proj.ios_mac/SuperSwitchRun/Classes/: AppDelegate.cpp
proj.ios_mac/SuperSwitchRun/Classes/DNAcheivementManager/: DNAcheivementManager.hpp
proj.ios_mac/SuperSwitchRun/Classes/DNDOManager/: DNDOManager.hpp
proj.ios_mac/SuperSwitchRun/Classes/DNDataManager/: DNDataManager.cpp  DNDataManager.h
proj.ios_mac/SuperSwitchRun/Classes/DNNetworkCheck/: DNCommonUtils.cpp  DNJniCommunicator.cpp  DNJniCommunicator.hpp  DNObjectiveC.h  DNObjectiveC.mm  DNReachability.h  DNReachability.m
proj.ios_mac/SuperSwitchRun/Classes/DNSplashScreen/: DNSplashScreen.cpp  DNSplashScreen.hpp
proj.ios_mac/SuperSwitchRun/Classes/JNICommunicator/: LVJniCommunicator.cpp
proj.ios_mac/SuperSwitchRun/Classes/Scene/DNGameScene/: DNGameScene.cpp  DNGameScene.hpp  DNReviveMenu.cpp  DNReviveMenu.hpp  DNVictoryMenu.hpp  UserDialogueLayer.cpp
proj.ios_mac/SuperSwitchRun/Classes/Scene/DNGameSceneLayer/: DNGameSceneLayer.cpp  DNGameSceneLayer.hpp
proj.ios_mac/SuperSwitchRun/Classes/Scene/DNMainMenuLayer/: DNBgPackLayer.hpp  DNCharacterPack.cpp  DNCharacterPack.hpp  DNMainMenuLayer.cpp  DNMainMenuLayer.hpp  SpriteFromURL.cpp  SpriteFromURL.h
proj.ios_mac/SuperSwitchRun/Classes/Scene/DNSettingScene/: DNSettingScene.hpp
proj.ios_mac/SuperSwitchRun/Classes/Scene/DNTutorialLayer/: DNTutoriallayer.cpp  DNTutoriallayer.hpp
proj.ios_mac/SuperSwitchRun/proj.android/: settings.gradle
proj.ios_mac/SuperSwitchRun/proj.android/app/: AndroidManifest.xml  build.gradle  proguard-rules.pro
proj.ios_mac/ios/: AppController.mm  Info.plist
proj.ios_mac/mac/: Info.plist
proj.tizen/: .project  tizen-manifest.xml
proj.win10/: MyGame3.sln
proj.win10/App/: MyGame3.vcxproj  MyGame3.vcxproj.filters  Package.appxmanifest
proj.win32/: MyGame3.sln  SuperSwitchRun.sln
(+19 files in other folders)
